--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "prettier": "^2.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-lottie": "^1.2.3",
+    "react-notifications": "^1.7.4",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
     "react-tooltip": "^5.4.0",
