Changes in mobile props

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Protolibrary",
-  "name": "CUAM Protolibrary",
+  "short_name": "Protobiblioteca",
+  "name": "Protobiblioteca",
   "icons": [
     {
       "src": "favicon.ico",
